--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,14 @@
 
     <data>
 
+        <import type="com.hx.ice.util.NavigationUtil" />
+
+        <import type="com.hx.ice.common.RouterConstants" />
+        <import type="com.hx.ice.constants.IceConstants" />
+
+        <variable
+            name="listener"
+            type="com.hx.ice.util.ListenerUtil" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,10 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@mipmap/logo"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.35" />
 
 
@@ -28,17 +36,16 @@
             android:id="@+id/bt_sms"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_44"
-            android:layout_marginBottom="@dimen/dp_16"
-            android:background="@drawable/login_button"
-            android:onClick="loginClick"
             android:layout_marginStart="@dimen/dp_36"
             android:layout_marginEnd="@dimen/dp_36"
+            android:layout_marginBottom="@dimen/dp_16"
+            android:background="@drawable/login_button"
+            android:onClick='@{()->NavigationUtil.INSTANCE.routerNavigation(RouterConstants.LOGIN_SMS_PHONE,"activityType",IceConstants.Login_SMS_Activity)}'
             android:text="@string/SMS"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
-            app:layout_constraintBottom_toTopOf="@+id/bt_password"
-           />
-
+            app:layout_constraintBottom_toTopOf="@+id/bt_password" />
+        <!-- 不能使用@mipmap/-->
         <Button
             android:id="@+id/bt_password"
             android:layout_width="match_parent"
@@ -47,7 +54,7 @@
             android:layout_marginEnd="@dimen/dp_36"
             android:layout_marginBottom="@dimen/dp_16"
             android:background="@drawable/login_button"
-            android:onClick="loginClick"
+            android:onClick='@{()-> NavigationUtil.INSTANCE.routerNavigation(RouterConstants.LOGIN_PASSWORD,"activityType",IceConstants.Login_Password_Activity)}'
             android:text="@string/Password_Login"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
@@ -60,8 +67,8 @@
             android:layout_marginStart="@dimen/dp_36"
             android:layout_marginEnd="@dimen/dp_36"
             android:layout_marginBottom="@dimen/dp_44"
-            android:text="@string/Facebook_Login"
             android:onClick="loginClick"
+            android:text="@string/Facebook_Login"
             android:textColor="@color/white"
             android:textSize="@dimen/sp_16"
             app:cornerRadius="@dimen/dp_4"
